--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,3 +7,8 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+h1 { @apply text-3xl; }
+h2 { @apply text-2xl; }
+h3 { @apply text-xl; }
+.card { @apply p-4 space-y-4; }
